First version of CSN Plugin implementation.
Moved most download process implementation (start, pause, resume, cancel etc.) into the Plugin Development Kit for re-use with the CSN Plugin.
Ensured that all plugins generate a jar with dependencies.